--- a/public/css/body.css
+++ b/public/css/body.css
@@ -1,6 +1,6 @@
 /* latin */
 @font-face {
-    font-family: 'SB Body';
+    font-family: 'Times New Roman';
     font-style: italic;
     font-weight: 400;
     src: local('Lato Italic'), local('Lato-Italic'),
