made some stuff green

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5960,7 +5960,7 @@ a.bg-primary:focus, a.bg-primary:hover, button.bg-primary:focus, button.bg-prima
 }
 
 .bg-secondary {
-    background-color: #2c3e50!important
+    background-color: #16571f!important
 }
 
 a.bg-secondary:focus, a.bg-secondary:hover, button.bg-secondary:focus, button.bg-secondary:hover {
@@ -9184,7 +9184,7 @@ form .row:first-child .floating-label-form-group {
 .footer {
     padding-top: 5rem;
     padding-bottom: 5rem;
-    background-color: #2c3e50;
+    background-color: #16571f;
     color: #fff
 }
 
